// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Level
  level="OK"
  small={true}
/>
`;

exports[`should render correctly 2`] = `
<Level
  level="ERROR"
  small={true}
/>
`;
